# qr-tool_chromium-extension

./: .gitignore  README.md  package-lock.json  package.json
docs/: chrome_web_store_listing.md
extension/: app.css  app.html  app.js  background.js  manifest.json  popup.css  popup.html  popup.js
extension/locales/: en.json  vi.json
scripts/: build_extension.ps1  build_extension.sh  dist_github_sync.ps1  dist_publish_extension.ps1
wasm_qr/: Cargo.toml
wasm_qr/src/: lib.rs  verify.rs
