[package]
name = "wasm_qr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.22"
console_error_panic_hook = { version = "0.1", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
percent-encoding = "2.3"
qrcode = "0.14"
rqrr = "0.10"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
url = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestCache", "RequestRedirect", "Response", "Headers"] }
